<resources>
    <string name="app_name">Tourguide</string>
    <string name="add_sight">Add Sight</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="add_a_sight">Add a Sight</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="website">Website</string>
    <string name="worktime">Worktime</string>
    <string name="price">Price</string>
    <string name="comment">Comment</string>
    <string name="edit_sight">Edit Sight</string>
    <string name="delete_sight">Delete Sight</string>
</resources>
